fix: Prevent work break on chinese button labels in action row (fixes #733)

--- a/src/VueDatePicker/style/components/_ActionRow.scss
+++ b/src/VueDatePicker/style/components/_ActionRow.scss
@@ -25,6 +25,7 @@
 .dp__action_buttons {
   display: flex;
   flex: 0;
+  white-space: nowrap;
   align-items: center;
   justify-content: flex-end;
   margin-inline-start: auto;
